# fastapi_messager

./: .env_temp  pyproject.toml
src/: config.py  database.py  dependencies.py  main.py
src/api/: auth.py  messages.py  users.py
src/connectors/: redis.py
src/migrations/: env.py
src/migrations/versions/: 2025_05_15_1211-486c8703ea81_init.py
src/models/: messages.py  users.py
src/repos/: base.py  messages.py  users.py
src/repos/mappers/: base.py  mappers.py
src/schemas/: messages.py  users.py
src/services/: auth.py
src/utils/: db_manager.py  exceptions.py
